# Base_CPP_homeworks

./: .gitignore
coursework_2/Racing_Sim/: CMakeLists.txt  air_race.cpp  air_race.h  enum_classes.h  ground_race.cpp  ground_race.h  main.cpp  race.cpp  race.h  registration.h  transportmeans.cpp  transportmeans.h
hw_2.1/02_01_task_1/: hw_02.01.1.cpp
hw_2.1/02_01_task_2/: hw_02.01.2.cpp
hw_2.10/hw_02_10_task_2/: CMakeLists.txt  equilateraltriangle.cpp  equilateraltriangle.h  figure.cpp  figure.h  isoscelestriangle.cpp  isoscelestriangle.h  parallelogramm.cpp  parallelogramm.h  quadrangle.h  rectangle.cpp  rectangle.h  rectangular.h  romb.cpp  romb.h  source.cpp  square.cpp  square.h  triangle.h
hw_2.11/hw_02_11_task_1/: CMakeLists.txt  Greeter.cpp  Greeter.h  GreeterClient.cpp
hw_2.11/hw_02_11_task_2/: LeaverLib.sln
hw_2.11/hw_02_11_task_3/: CMakeLists.txt  Leaver.cpp  Leaver.h  LeaverClient.cpp
hw_2.11/hw_02_11_task_4/: FigureLib.sln
hw_2.11/hw_02_11_task_5/FigureLib_cmake/: CMakeLists.txt  FigureClient.cpp  equilateraltriangle.cpp  equilateraltriangle.h  figure.cpp  figure.h  finfo.cpp  finfo.h  isoscelestriangle.h  parallelogramm.cpp  parallelogramm.h  quadrangle.h  rectangle.h  rectangular.cpp  rectangular.h  romb.h  square.cpp  square.h  triangle.cpp  triangle.h
hw_2.2/02_02_task_1/: hw_02.02.1  hw_02.02.1.cpp
hw_2.2/02_02_task_2/: hw_02.02.2  hw_02.02.2.cpp
hw_2.2/02_02_task_3/: hw_02.02.3.cpp
hw_2.4/02_04_task_1/: hw_02.04.1.cpp
hw_2.6/hw_02_06_task_3/: CMakeLists.txt  equilateraltriangle.h  isoscelestriangle.h  main.cpp  parallelogramm.h  quadrangle.cpp  quadrangle.h  rectangle.h  rectangular.cpp  rectangular.h  romb.h  square.h  triangle.cpp  triangle.h
hw_unit-test/: CMakeLists.txt  extended_array.h  test_1.cpp
(+72 files in other folders)
